@YELP_HELP_RULES@

HELP_ID = totem

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_MEDIA = \
		figures/totem_show_playlist_button.png 	\
		figures/totem_next_button.png		\
		figures/totem_start_window.png		\
		figures/totem_pause_button.png		\
		figures/totem_volume_maximum_button.png	\
		figures/totem_play_button.png		\
		figures/totem_volume_mute_button.png	\
		figures/totem_previous_button.png

HELP_LINGUAS = bg ca cs da de el en_GB es eu fi fr gl it ja oc pa pl pt_BR ro ru sl sv te uk zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
