@YELP_HELP_RULES@

HELP_ID = xplayer

HELP_FILES = \
	index.docbook \
	legal.xml

HELP_MEDIA = \
		figures/xplayer_show_playlist_button.png 	\
		figures/xplayer_next_button.png		\
		figures/xplayer_start_window.png		\
		figures/xplayer_pause_button.png		\
		figures/xplayer_volume_maximum_button.png	\
		figures/xplayer_play_button.png		\
		figures/xplayer_volume_mute_button.png	\
		figures/xplayer_previous_button.png

HELP_LINGUAS = bg ca cs da de el en_GB es eu fi fr gl it ja oc pa pl pt_BR ro ru sl sv te uk zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
