include $(top_srcdir)/src/plugins/Makefile.plugins

plugindir = $(PLUGINDIR)/sample-python
plugin_PYTHON = samplepython.py

plugin_in_files = samplepython.plugin.in

# Override to _not_ install the test plugins
install-pluginPYTHON:
install-pluginDATA:
uninstall-pluginPYTHON:
uninstall-pluginDATA:

-include $(top_srcdir)/git.mk
